--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,4 +1,5 @@
-  <main id="content" role="main" class="flex-grow-1 overflow-hidden mt-5">
+  
+<main id="content" role="main" class="flex-grow-1 overflow-hidden mt-5">
     <!-- Content -->
     <div class="container content-space-t-1 content-space-b-2 mt-5">
       <div class="mx-lg-auto mt-5" style="max-width: 55rem;">
@@ -9,67 +10,98 @@
               <div class="row">
                   <div class="card-body">
                     <!-- Form -->
-                    <form class="js-validate needs-validation" novalidate>
+                    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="js-validate needs-validation" novalidate id="signup-form">
                       <div class="text-center">
                         <div class="mb-5">
                           <h3 class="card-title">Créer votre compte</h3>
                         </div>
-
                         <a class="btn btn-white btn-lg d-grid mb-4" href="#">
                           <span class="d-flex justify-content-center align-items-center">
                             <img class="avatar avatar-xss me-2" src="./assets/svg/brands/google-icon.svg" alt="Image Description">
                             S'enregistrer avec Google
                           </span>
                         </a>
-
                         <a class="btn btn-white btn-lg d-grid mb-4" href="#">
                             <span class="d-flex justify-content-center align-items-center">
                                     <img class="avatar avatar-xs me-2" src="./assets/svg/brands/facebook.svg" alt="Image Description">
                                     S'enregistrer avec Facebook
                             </span>
                         </a>
-
                         <span class="divider-center text-muted mb-4">OU</span>
                       </div>
-
-                      <label class="form-label" for="fullNameSrEmail">Nom complet</label>
-
-                      <!-- Form -->
+                      
+                      <!-- Nom complet -->
                       <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-2">
                           <!-- Form -->
-                          <div class="mb-4">
-                            <input type="text" class="form-control form-control-lg" name="fullName" id="fullNameSrEmail" placeholder="Mark" aria-label="Mark" required>
-                            <span class="invalid-feedback">Merci de saisir votre prénom.</span>
+                          <div class="mb-4 form-group">
+                            <label class="form-label" for="civility">Civilité</label>
+                            <input formControlName="civility" [ngClass]="{'is-invalid':submitted && registerForm.controls['civility'].errors}" type="text" class="form-control form-control-lg" name="civility" id="civility" placeholder="M." aria-label="M." required>
+                            <div *ngIf="submitted && registerForm.controls['civility'].errors" class="text-danger">
+                              <div *ngIf="submitted && registerForm.controls['civility'].errors['required']">
+                                Merci de saisir votre civilité.
+                              </div>
+                            </div>
                           </div>
                           <!-- End Form -->
                         </div>
 
-                        <div class="col-sm-6">
+                        <div class="col-sm-5">
                           <!-- Form -->
-                          <div class="mb-4">
-                            <input type="text" class="form-control form-control-lg" placeholder="Williams" aria-label="Williams" required>
-                            <span class="invalid-feedback">Merci de saisir votre nom.</span>
+                          <div class="mb-4 form-group">
+                            <label class="form-label" for="firstName">Prénom</label>
+                            <input formControlName="firstName" [ngClass]="{'is-invalid':submitted && registerForm.controls['firstName'].errors}" type="text" class="form-control form-control-lg" name="firstName" id="firstName" placeholder="Williams" aria-label="Williams" required>
+                            <div *ngIf="submitted && registerForm.controls['firstName'].errors" class="text-danger">
+                              <div *ngIf="submitted && registerForm.controls['firstName'].errors['required']">
+                                Merci de saisir votre prénom.
+                              </div>
+                              <div *ngIf="submitted && registerForm.controls['firstName'].errors['minlength']">
+                                Votre prénom doit comporter au moins 3 lettres.
+                              </div>
+                            </div>
+                          </div>
+                          <!-- End Form -->
+                        </div>
+
+                        <div class="col-sm-5">
+                          <!-- Form -->
+                          <div class="mb-4 form-group">
+                            <label class="form-label" for="lastName">Nom</label>
+                            <input formControlName="lastName" [ngClass]="{'is-invalid':submitted && registerForm.controls['lastName'].errors}" type="text" class="form-control form-control-lg" placeholder="Mark" aria-label="Mark" name="lastName" id="lastName" required>
+                            <div *ngIf="submitted && registerForm.controls['lastName'].errors" class="text-danger">
+                              <div *ngIf="submitted && registerForm.controls['lastName'].errors['required']">
+                                Merci de saisir votre nom.
+                              </div>
+                              <div *ngIf="submitted && registerForm.controls['lastName'].errors['minlength']">
+                                Votre nom doit comporter au moins 3 lettres.
+                              </div>
+                            </div>
                           </div>
                           <!-- End Form -->
                         </div>
                       </div>
-                      <!-- End Form -->
+                      <!-- end nom complet -->
 
-                      <!-- Form -->
-                      <div class="mb-4">
-                        <label class="form-label" for="signupSrEmail">Votre email</label>
-                        <input type="email" class="form-control form-control-lg" name="email" id="signupSrEmail" placeholder="Markwilliams@site.com" aria-label="Markwilliams@site.com" required>
-                        <span class="invalid-feedback">Merci de saisir un email valide.</span>
+                      <!-- email -->
+                      <div class="mb-4 form-group">
+                        <label class="form-label" for="email">Email</label>
+                        <input formControlName="email" [ngClass]="{'is-invalid':submitted && registerForm.controls['email'].errors}" type="email" class="form-control form-control-lg" name="email" id="email" placeholder="markwilliams@gmail.com" aria-label="markwilliams@gmail.com" required>
+                        <div *ngIf="submitted && registerForm.controls['email'].errors" class="text-danger">
+                          <div *ngIf="submitted && registerForm.controls['email'].errors['required']">
+                            Merci de saisir votre email.
+                          </div>
+                          <div *ngIf="submitted && registerForm.controls['email'].errors['email']">
+                            Votre email n'est pas valide.
+                          </div>
+                        </div>
                       </div>
-                      <!-- End Form -->
+                      <!-- end email -->
 
-                      <!-- Form -->
-                      <div class="mb-4">
-                        <label class="form-label" for="signupSrPassword">Mot de passe</label>
-
+                      <!-- mot de passe -->
+                      <div class="mb-4 form-group">
+                        <label class="form-label" for="password">Mot de passe</label>
                         <div class="input-group-merge">
-                          <input type="password" class="js-toggle-password form-control form-control-lg" name="password" id="signupSrPassword" placeholder="8+ characters required" aria-label="8+ characters required" required minlength="8"
+                          <input formControlName="password" [ngClass]="{'is-invalid':submitted && registerForm.controls['password'].errors}" type="password" class="js-toggle-password form-control form-control-lg" name="password" id="password" placeholder="Mot de passe fort" aria-label="Mot de passe fort." required minlength="8"
                                  data-hs-toggle-password-options='{
                                    "target": [".js-toggle-password-target-1", ".js-toggle-password-target-2"],
                                    "defaultClass": "bi-eye-slash",
@@ -79,18 +111,21 @@
                           <a class="js-toggle-password-target-1 input-group-append input-group-text" href="javascript:;">
                             <i class="js-toggle-password-show-icon-1 bi-eye"></i>
                           </a>
-          
-                          <span class="invalid-feedback">Votre mote de passe est invalide. Saisir un nouveau mot de passe.</span>
+                          <div *ngIf="submitted && registerForm.controls['password'].errors" class="text-danger">
+                            <ng-container *ngIf="submitted && registerForm.controls['password'].errors['required']; then errorsRequired; else errorsPassword"></ng-container>
+                              <ng-template #errorsRequired>Merci de saisir votre mot de passe.</ng-template>
+                              <ng-template #errorsPassword>Le mot de passe doit comporter au moins une lettre majuscule, une lettre minuscule, un chiffre et une longueur minimale de 8 caractères.</ng-template>
+                            </div>
+                          </div>
                         </div>
-                      </div>
-                      <!-- End Form -->
+                      <!-- mot de passe -->
 
-                      <!-- Form -->
-                      <div class="mb-4">
+                      <!-- confirm mot de passe -->
+                      <div class="mb-4 form-group">
                         <label class="form-label" for="signupSrConfirmPassword">Confirmer le mot de passe</label>
 
                         <div class="input-group-merge">
-                          <input type="password" class="js-toggle-password form-control form-control-lg" name="confirmPassword" id="signupSrConfirmPassword" placeholder="8+ characters required" aria-label="8+ characters required" required minlength="8"
+                          <input formControlName="confirmPassword" [ngClass]="{'is-invalid':submitted && registerForm.controls['confirmPassword'].errors}" type="password" class="js-toggle-password form-control form-control-lg" name="confirmPassword" id="signupSrConfirmPassword" placeholder="Mot de passe fort" aria-label="Mot de passe fort" required minlength="8"
                                  data-hs-toggle-password-options='{
                                    "target": [".js-toggle-password-target-1", ".js-toggle-password-target-2"],
                                    "defaultClass": "bi-eye-slash",
@@ -100,23 +135,27 @@
                           <a class="js-toggle-password-target-2 input-group-append input-group-text" href="javascript:;">
                             <i class="js-toggle-password-show-icon-2 bi-eye"></i>
                           </a>
-          
-                          <span class="invalid-feedback">Les mots de passe ne correspondent pas.</span>
+                          <div *ngIf="submitted && registerForm.controls['confirmPassword'].errors" class="text-danger">
+                            <ng-container *ngIf="submitted && registerForm.controls['confirmPassword'].errors['required']; then errorsRequired; else errorsConfirmPassword"></ng-container>
+                                <ng-template #errorsRequired>Merci de saisir votre mot de passe.</ng-template>
+                                <ng-template #errorsConfirmPassword>La confirmation du mot de passe doit être identique au mot de passe.</ng-template>
+                            </div>
                         </div>
                       </div>
-                      <!-- End Form -->
+                      <!-- end confirm mot de passe -->
 
                       <!-- Form Check -->
-                      <div class="form-check mb-4">
-                        <input class="form-check-input" type="checkbox" value="" id="termsCheckbox" required>
-                        <label class="form-check-label" for="termsCheckbox">I accept the <a href="#">Terms and Conditions</a></label>
-                        <span class="invalid-feedback">Please accept our Terms and Conditions.</span>
+                      <div class="form-check mb-4 form-group">
+                        <input formControlName="termsCheckbox" [ngClass]="{'is-invalid':submitted && registerForm.controls['termsCheckbox'].errors}" class="form-check-input" type="checkbox" value="" id="termsCheckbox" required>
+                        <label class="form-check-label" for="termsCheckbox">J'accepte les <a href="#">conditions générales d'utilisation.</a></label>
+                        <span class="invalid-feedback">Merci d'accepter les conditions générales d'utilisation.</span>
                       </div>
                       <!-- End Form Check -->
 
                       <div class="d-grid gap-4">
                         <button type="submit" class="btn btn-primary btn-lg">Créer mon compte</button>
-                        <p class="card-text text-muted">Mot de passe oublié ? <a class="link" routerLink="login">Se connecter</a></p>
+
+                        <p class="card-text text-muted">Vous avez déjà un compte ? <a class="link" routerLink="login">Se connecter</a></p>
                       </div>
                     </form>
                     <!-- End Form -->
