--- a/src/app/components/article-detail/article-detail.component.html
+++ b/src/app/components/article-detail/article-detail.component.html
@@ -19,8 +19,9 @@
         <ul class="list-checked list-checked-soft-bg-primary list-checked-lg mb-5">
           <li class="list-checked-item"><span class="fw-bold">Editeur :</span> {{ article.bookEditor }}</li>
 
+          
           <li class="list-checked-item"><span class="fw-bold">Catégories : </span>
-            <ng-container *ngFor="let types of article.bookTypes">
+            <ng-container *ngFor="let types of article.booktypes">
               {{ types }} 
             </ng-container>
           </li>
