--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -5,6 +5,6 @@
         <h3 class="mb-1">Oups !</h3>
         <p>La page que vous recherchez n'existe pas !</p>
       </div>
-      <a class="btn btn-primary" href="./index.html">Page d'accueil</a>
+      <a class="btn btn-primary" routerLink="../home">Page d'accueil</a>
     </div>
 </main>
