modif mineurs login header home

--- a/src/app/components/card-article/card-article.component.css
+++ b/src/app/components/card-article/card-article.component.css
@@ -28,3 +28,12 @@
 .cursor{
     cursor: pointer;
 }
+
+.button-container {
+  position: relative;
+}
+
+.btn {
+  position: absolute;
+  bottom: 0;
+}
