--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
 <main id="content" role="main" class="flex-grow-1 overflow-hidden mt-5">
+  <div id="cart-alert" class="alert alert-danger" role="alert" style="display:none;"></div>
     <!-- Content -->
     <div class="container content-space-t-1 content-space-b-2 mt-5">
       <div class="mx-lg-auto mt-5" style="max-width: 55rem;">
@@ -75,7 +76,7 @@
                         <a class="form-label-link" routerLink="../resetPassword">Mot de passe oublié ?</a>
                       </div>
                       -->
-                      
+
                       <div class="d-grid gap-4">
                         <button type="submit" class="btn btn-primary btn-lg">S'enregistrer</button>
 
@@ -86,7 +87,7 @@
                   </div>
                 </div>
                 <!-- End Col -->
-                  
+
 
 
               <!-- End Row -->
@@ -104,7 +105,7 @@
               <img class="img-fluid" src="./assets/svg/components/curved-shape.svg" alt="Image Description">
             </figure>
             <!-- End SVG Shape -->
-            
+
             <!-- SVG Shape -->
             <figure class="position-absolute bottom-0 start-0 d-none d-sm-block ms-n10 mb-n10" style="width: 15rem;">
               <img class="img-fluid" src="./assets/svg/components/curved-shape.svg" alt="Image Description">
