--- a/src/app/components/admin-administration/admin-administration.component.html
+++ b/src/app/components/admin-administration/admin-administration.component.html
@@ -1,1 +1,123 @@
-<p>admin-administration works!</p>
+
+
+<main id="content" role="main" class="flex-grow-1 overflow-hidden mt-5">
+  <!-- Content -->
+  <div class="container content-space-t-1 content-space-b-2 mt-5">
+    <div class="mx-lg-auto mt-5">
+      <div class="justify-content-center align-items-center flex-column">
+        <div class="justify-content-center align-items-center d-flex">
+          <!-- Nav -->
+          <ul class="nav nav-segment justify-content-center mb-7" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="nav-one-eg2-tab" href="#nav-one-eg2" data-bs-toggle="pill" data-bs-target="#nav-one-eg2" role="tab" aria-controls="nav-one-eg2" aria-selected="true">
+                <i class="bi-house nav-icon"></i> Dashboard
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-two-eg2-tab" href="#nav-two-eg2" data-bs-toggle="pill" data-bs-target="#nav-two-eg2" role="tab" aria-controls="nav-two-eg2" aria-selected="false">
+                <i class="bi-person nav-icon"></i> Articles
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-three-eg2-tab" href="#nav-three-eg2" data-bs-toggle="pill" data-bs-target="#nav-three-eg2" role="tab" aria-controls="nav-three-eg2" aria-selected="false">
+                <i class="bi-sliders nav-icon"></i> Comptes
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+          <!-- Tab Content -->
+      <div class="tab-content">
+        <div class="tab-pane fade show active" id="nav-one-eg2" role="tabpanel" aria-labelledby="nav-one-eg2-tab">
+          <!-- Accordion -->
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <div class="accordion-header" id="headingOne">
+                <a class="accordion-button" role="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Commandes en cours
+                </a>
+              </div>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+
+                  <!-- Card -->
+                  <div class="card">
+                    <div class="card-header">
+                      <h4 class="card-header-title">Commandes</h4>
+                    </div>
+
+                    <!-- Table -->
+                    <div class="table-responsive">
+                      <table class="table table-nowrap table-align-middle ">
+                        <thead class="thead-light">
+                        <tr class="text-center">
+                          <th>Date</th>
+                          <th>Numéro</th>
+                          <th>Total TTC</th>
+                          <th>Statut</th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <!--
+                        <tr *ngFor="let order of orderList">
+                          <td>
+                            <span class="d-block h5 text-inherit mb-0 text-center">{{ order.date | date: 'dd/MM/yyyy' }}</span>
+                          <td>
+                            <span class="d-block h5 text-inherit mb-0 text-center">{{ order.number }}</span>
+                          </td>
+                          <td>
+                            <span class="d-block h5 mb-0 text-align-right">{{ order.totalExcludingTaxes }} €</span>
+                          </td>
+                          <td class="text-center">
+                            <span class="legend-indicator bg-success"></span>En cours
+                          </td>
+                        </tr>
+-->
+                        </tbody>
+                      </table>
+                    </div>
+                    <!-- End Table -->
+                  </div>
+                  <!-- End Card -->
+
+
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-header" id="headingTwo">
+                <a class="accordion-button collapsed" role="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Commandes expédiées
+                </a>
+              </div>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End Accordion -->
+
+
+        </div>
+
+        <div class="tab-pane fade" id="nav-two-eg2" role="tabpanel" aria-labelledby="nav-two-eg2-tab">
+            Profile
+        </div>
+
+        <div class="tab-pane fade" id="nav-three-eg2" role="tabpanel" aria-labelledby="nav-three-eg2-tab">
+          Comptes
+        </div>
+
+      </div>
+          <!-- End Tab Content -->
+    </div>
+  </div>
+  <!-- End Content -->
+</main>
+
+
+
