--- a/src/app/components/admin-administration/admin-administration.component.html
+++ b/src/app/components/admin-administration/admin-administration.component.html
@@ -27,6 +27,10 @@
         </div>
       </div>
 
+
+      <app-author></app-author>
+
+
           <!-- Tab Content -->
       <div class="tab-content">
         <div class="tab-pane fade show active" id="nav-one-eg2" role="tabpanel" aria-labelledby="nav-one-eg2-tab">
@@ -105,7 +109,7 @@
         </div>
 
         <div class="tab-pane fade" id="nav-two-eg2" role="tabpanel" aria-labelledby="nav-two-eg2-tab">
-            Profile
+          <app-articles></app-articles>
         </div>
 
         <div class="tab-pane fade" id="nav-three-eg2" role="tabpanel" aria-labelledby="nav-three-eg2-tab">
