--- a/src/app/components/admin-administration/author/author.component.html
+++ b/src/app/components/admin-administration/author/author.component.html
@@ -1,5 +1,8 @@
 <div class="d-flex justify-content-center">
   <div class="col-lg-6">
+    <div id="cart-success" class="alert alert-primary" role="alert" style="display:none;"></div>
+    <div id="cart-error" class="alert alert-danger" role="alert" style="display:none;"></div>
+
     <!-- Dropdown pour sélectionner un auteur -->
     <div class="d-flex justify-content-between">
       <div class="dropdown">
@@ -7,13 +10,14 @@
           Sélectionner un auteur
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" *ngFor="let author of authors" (click)="selectAuthor(author)">{{ author.firstname }} {{ author.lastname }}</a>
+          <a class="dropdown-item" *ngFor="let author of authors$ | async" (click)="selectAuthor(author)">{{ author.firstname }} {{ author.lastname }}</a>
         </div>
       </div>
-      <button class="btn btn-primary" *ngIf="isEmptyObject(selectedAuthor)" (click)="addAuthor()">Nouveau auteur</button>
+      <button class="btn btn-primary" *ngIf="selectedAuthorCheck" (click)="addAuthor()">Nouveau auteur</button>
     </div>
     <!-- Formulaire pour ajouter/modifier un auteur -->
-    <form (ngSubmit)="submitForm()" #authorForm="ngForm">
+    <form #authorForm="ngForm">
+      <input class="d-none" id="id" name="id" [(ngModel)]="selectedAuthor.id">
       <div class="form-group mt-4">
         <label for="firstname">Prénom</label>
         <input type="text" class="form-control" id="firstname" name="firstname" [(ngModel)]="selectedAuthor.firstname" required>
@@ -29,9 +33,9 @@
 
       <!-- Boutons Ajouter/Modifier/Supprimer -->
       <div class="d-grid gap-2">
-        <button class="btn btn-primary mt-3" type="submit" *ngIf="isEmptyObject(selectedAuthor)" (click)="updateAuthor()">Modifier</button>
-        <button class="btn btn-primary mt-3" type="submit" *ngIf="!isEmptyObject(selectedAuthor)" (click)="addAuthor()">Ajouter</button>
-        <button class="btn btn-danger mt-3" *ngIf="isEmptyObject(selectedAuthor)" (click)="deleteAuthor()">Supprimer</button>
+        <button class="btn btn-primary mt-3" type="submit" *ngIf="selectedAuthorCheck" (click)="updateAuthor()">Modifier</button>
+        <button class="btn btn-primary mt-3" type="submit" *ngIf="!selectedAuthorCheck" (click)="postAuthor()">Ajouter</button>
+        <button class="btn btn-danger mt-3" *ngIf="selectedAuthorCheck" (click)="deleteAuthor()">Supprimer</button>
       </div>
     </form>
   </div>
